src/tests/snapshots/learn_chumsky__tests__modules__empty-2.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod {}
---

Some(
    Spanned(
        Module {
            name: None,
            items: [],
        },
        0..6,
    ),
)

--- Errors ---
[]
---
