src/tests/snapshots/learn_chumsky__tests__modules__empty-3.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name
---

Some(
    (
        Module {
            name: Some(
                (
                    "name",
                    4..8,
                ),
            ),
            items: [],
        },
        0..8,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Module,
        ),
        span: 2..2,
        reason: Unexpected,
        found: Eof,
        expected: [
            Semi,
            OpenBrace,
        ],
    },
]
---
