src/tests/snapshots/learn_chumsky__tests__modules__empty-4.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name;
---

Some(
    (
        Module {
            name: Some(
                (
                    "name",
                    4..8,
                ),
            ),
            items: [],
        },
        0..9,
    ),
)

--- Errors ---
[]
---
