src/tests/snapshots/learn_chumsky__tests__modules__empty-5.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod
---

Some(
    (
        Module {
            name: None,
            items: [],
        },
        0..3,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Module,
        ),
        span: 1..1,
        reason: Unexpected,
        found: Eof,
        expected: [
            Semi,
            OpenBrace,
        ],
    },
]
---
