src/tests/snapshots/learn_chumsky__tests__modules__empty-6.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod;
---

Some(
    (
        Module {
            name: None,
            items: [],
        },
        0..4,
    ),
)

--- Errors ---
[]
---
