src/tests/snapshots/learn_chumsky__tests__modules__empty.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name {}
---

Some(
    (
        Module {
            name: (
                "name",
                4..8,
            ),
            items: [],
        },
        0..11,
    ),
)

--- Errors ---
[]
---
